# llada-vla-on-unitree_go2

./: .gitignore  README.md  RUNBOOK_CN.md  collector_defaults.json  requirements.txt
docs/: collector_state_machine.md  llada_vla_dataset_spec.md  pilot_collection_plan.md  sanity_check_dataset.md  seed5_visual_followup_plan.md  visually_necessary_collection_plan.md
native/: CMakeLists.txt  collector_input_backend.cpp  collector_input_backend.h  collector_input_backend_evdev.cpp  collector_input_backend_wireless.cpp  collector_input_utils.cpp  collector_input_utils.h  go2_bridge.cpp  go2_collector.cpp  go2_mode_probe.cpp  go2_speed_level_probe.cpp  go2_video_probe.cpp  raw_terminal_guard.h  web_ui_server.cpp  web_ui_server.h  wireless_gamepad.h
native/web_ui_assets/: app.js  index.html  style.css
scripts/: run_go2_collector_auto.sh  run_vla_bridge_infer.sh  sanity_check_dataset.py  sync_orin_sessions.sh
tools/: convert_llada_vla_dataset.py  derive_distribution_labels.py  derive_target_labels.py  llada_vla_baseline.py  llada_vla_baseline_v2.py  llada_vla_common.py  llada_vla_infer_v2.py  summarize_baseline_v2_runs.py  validate_bc_dataset.py
